# Lite-Gravity-Compensation

./: .gitignore  README.md  bar_dds.py  common.py  gravity.py  pyproject.toml  run_mujoco.py  run_real_pd.py  run_real_robot_pd.py  run_real_robot_torque.py  run_real_torque.py  run_ros2_pd.py  run_ros2_torque.py  run_sim.py  runner.py  test_mujoco.py  visualize_real.py  visualize_real_robot.py
data/robots/lite_dummy/mjcf/: lite.xml  scene.xml
