[project]
name = "lite-gravity-compensation"
version = "0.2.0"
description = "Gravity-compensation demos for the Berkeley Humanoid Lite robot."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "lite-sdk2",
    "loop-rate-limiters>=1.2.0",
    "mink>=1.1.0",
    "mujoco>=3.6.0",
    "numpy>=2.4.4",
    "robot-descriptions",
]

[tool.uv.sources]
robot-descriptions = { git = "https://github.com/Berkeley-Humanoids/Robot-Descriptions.git" }
lite-sdk2 = { git = "https://github.com/Berkeley-Humanoids/Lite-SDK2.git", subdirectory = "python" }

[tool.ruff]
line-length = 120
